<resources>
    <string name="app_name">Crossfit Trivia</string>
    <string name="start_text">Start Fragment</string>
    <string name="game_text">Game Fragment</string>
    <string name="game_start_button">Start Game</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </string>

    <!--ChoiceFragment-->
    <string name="emomButton">E.M.O.M</string>
    <string name="amrapButton">A.M.R.A.P</string>
    <string name="chipperButton">Chipper</string>
    <string name="choice_title">Choose Game</string>

    <!--Emom Mode-->
    <string name="emom_title">EMOM (%1$d/%2$d)</string>
    <string name="emom_toast">"Answer %1$d questions to Nailed it"</string>

    <!--Amrap Mode-->
    <string name="amrap_title">AMRAP</string>
    <string name="amrap_entry_toast">You have 5 minutes to Rock It !!!</string>
    <string name="amrap_4_min">4 minutes left</string>
    <string name="amrap_half_min">first half is gone, you can do it!!!</string>
    <string name="amrap_1_min">1 min, don\'t give up</string>
    <string name="amrap_10_sec">10 seconds</string>
    <string name="amrap_3_sec">3</string>
    <string name="amrap_2_sec">2</string>
    <string name="amrap_1_sec">1</string>

    <!--Chipper Mode-->
    <string name="chipper_title">Chipper</string>
    <string name="chipper_toast">Do them all</string>
    <string name="wrong_answer">Wrong Answer</string>

    <!--Game fragment-->
    <string name="all_stats_gone">All stats are GONE</string>

    <!--radio  buttons-->
    <string name="first_radiobutton_tool_text">First Radio Button</string>
    <string name="second_radiobutton_tool_text">Second Radio Button</string>
    <string name="third_radiobutton_tool_text">Third Radio Button</string>
    <string name="fourth_radiobutton_tool_text">Fourth Radio Button</string>
    <string name="submit_text_button">Submit</string>
    <string name="question_pic_desc">Question picture</string>

    <!--NoRepFragment-->
    <string name="no_rep_title">No Rep</string>
    <string name="return_button">Back to Game</string>
    <string name="lesson_not_found">Lesson not found</string>
    <string name="title">Title</string>

    <!--ResultFragment-->
    <string name="results_title">Results</string>
    <string name="score">Score</string>
    <string name="great_success">Great Success</string>
    <string name="play_again">Play Again</string>
    <string name="score_text">"Score: %d"</string>
    <string name="score_time">"Time: %s"</string>
    <string name="choose_game">Choose Game</string>
    <string name="question_text">Some question</string>

    <!--MessageUtil-->
    <string name="back_button_ask">Do you want to lose all the stats?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="about_me">About me</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!--AuthorFragment-->
    <string name="me_desc">Me when I was kid</string>
</resources>