<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="game"
            type="com.example.android.crossfittrivia.GameFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/questionImage"
            android:layout_width="0dp"
            android:layout_height="@dimen/image_header_height"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/question_pic_desc"
            android:src="@drawable/jupiter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            style="@style/label_big"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{game.currentQuestion.text}"
            app:layout_constraintBottom_toTopOf="@+id/questions_radio_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionImage"
            tools:text="@string/question_text" />

        <RadioGroup
            android:id="@+id/questions_radio_button"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/submit_game_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <RadioButton
                android:id="@+id/first_answer_radiobutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{game.answers[0]}"
                android:textColor="@color/text"
                app:buttonTint="@color/radio_button_checked"
                tools:text="@string/first_radiobutton_tool_text" />

            <RadioButton
                android:id="@+id/second_answer_radiobutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{game.answers[1]}"
                android:textColor="@color/text"
                app:buttonTint="@color/radio_button_checked"
                tools:text="@string/second_radiobutton_tool_text" />

            <RadioButton
                android:id="@+id/third_answer_radiobutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{game.answers[2]}"
                android:textColor="@color/text"
                app:buttonTint="@color/radio_button_checked"
                tools:text="@string/third_radiobutton_tool_text" />

            <RadioButton
                android:id="@+id/fourth_answer_radiobutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{game.answers[3]}"
                android:textColor="@color/text"
                app:buttonTint="@color/radio_button_checked"
                tools:text="@string/fourth_radiobutton_tool_text" />

        </RadioGroup>

        <Button
            android:id="@+id/submit_game_button"
            style="@style/my_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/submit_text_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questions_radio_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>